--- a/_posts/CSS/2022-03-03-CSS.md
+++ b/_posts/CSS/2022-03-03-CSS.md
@@ -15,7 +15,7 @@ sidebar:
 <p align="center"><img src="./../../images/hcj.png"></p>
 
 ## <a style="color:#00adb5">CSS</a>이란 무엇인가 ?
-<a style="color:red"><b>ascading Style Sheets의 약자이며 HTML이나 XML로 작성된 문서의 표시 방법을 기술하기 위한 스타일 시트 언어</b></a>이다.<br>
+<a style="color:red"><b>cascading Style Sheets의 약자이며 HTML이나 XML로 작성된 문서의 표시 방법을 기술하기 위한 스타일 시트 언어</b></a>이다.<br>
 CSS는 웹 페이지를 표현하기 위한 스타일 규칙을 모아 놓은 문서이다.<br>
 
 ```css
