--- a/_posts/BOJ/2022-02-05-BOJ_S3_1244.md
+++ b/_posts/BOJ/2022-02-05-BOJ_S3_1244.md
@@ -81,7 +81,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 일단 삼항연산자를 사용하여 숫자 바꿔주기를 하였다. <br>
 그리고 남자는 간단하게 배수 찾기로 하였고 <br>
 여자는 범위를 벗어나는 경우 말고 무한루프문을 통해 왼쪽, 오른쪽을 비교해 주었다.<br>
