--- a/_posts/BOJ/2022-02-08-BOJ_S3_1935.md
+++ b/_posts/BOJ/2022-02-08-BOJ_S3_1935.md
@@ -71,6 +71,6 @@ public class Main {
 
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 STACK을 통해 문제를 푸는 것이다.<br>
 후위 표기식과 STACK의 구조만 이해하고 있다면 간단했을 문제다.
