--- a/_posts/BOJ/2022-02-09-BOJ_S3_1966.md
+++ b/_posts/BOJ/2022-02-09-BOJ_S3_1966.md
@@ -88,7 +88,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 문제에도 나와있지만 Queue를 이용해서 푸는 문제이다.<br>
 풀다보니 LinkedList가 모든 원소를 비교해 줄 수 있어서 LinkedList로 바꿨다.<br>
 쓸 수 있는 메서드도 더 많고 어차피 Queue도 상속하고 있기 때문에 큐가 쓰는 메서드도 다 써서 구현하였다. ( 물론 Queue도 안써도 된다 )<br>
