--- a/_posts/BOJ/2022-02-10-BOJ_B1_2563.md
+++ b/_posts/BOJ/2022-02-10-BOJ_B1_2563.md
@@ -63,7 +63,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 보고 나서 처음에는 경우의 수가 너무 많은 생각을 하며 어떻게 하지 생각했었는데 굉장히 굉장히 간단한 것이였다..<br>
 이런 문제의 구조를 알았다면 거짓말 안하고 5분도 안 걸렸을 듯.. ㅎㅎ <br>
 크기도 100*100으로 정해져있어 다 돌면서 사각형이 들어갈 자리면 1을 넣고 겹치면 통과 이렇게 계속 배열을 돌면 된다.<br>
