--- a/_posts/BOJ/2022-02-10-BOJ_S3_2606.md
+++ b/_posts/BOJ/2022-02-10-BOJ_S3_2606.md
@@ -81,7 +81,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 dfs로 풀어주었다.<br>
 1번 컴퓨터와 연결되어있는 간선을 끝까지 따라가서 isChecked에 true를 주고 카운팅을 해주었다.<br>
 많은 사람들이 자식을 두번 설정해주는 것을 까먹었다는데 여기서는 방향이 없기 때문에 두번 설정해주는 것이 많이 놓칠 수 있는 부분이다.
