--- a/_posts/BOJ/2022-02-11-BOJ_S2_16926.md
+++ b/_posts/BOJ/2022-02-11-BOJ_S2_16926.md
@@ -82,7 +82,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 배열을 한 번만 옮기는 것이 아니라 R만큼 옮겨야 하므로 좀 더 생각이 필요했던 문제이다.<br>
 그래서 z라는 변수를 사용해 첫번째 겉껍질들을 다 옮기고 나면 하나씩 다 줄어들게 하여 그 다음 껍질을 옮기게 했다.
 이것을 배열 크기의 반만큼 수행해 주었다.<br>
