--- a/_posts/BOJ/2022-02-11-BOJ_S5_1010.md
+++ b/_posts/BOJ/2022-02-11-BOJ_S5_1010.md
@@ -65,7 +65,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 굉장히 풀이가 보이는 문제였지만 제일 고생한 문제..<br>
 정말.. 처음에는 당연히 조합인 줄 알고 조합을 재귀로 했는데 실패하고.. <br>
 nCr 조합 연산식으로 했는데도 StackOverFlow가 발생하고..<br>
