--- a/_posts/BOJ/2022-02-14-BOJ_B2_3040.md
+++ b/_posts/BOJ/2022-02-14-BOJ_B2_3040.md
@@ -75,7 +75,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 보자마자 순서가 상관없는 계산이라고 생각하여 조합으로 풀어주었다.<br>
 그러나 쉽게 해결하지 못하여 한 번더 조합을 느끼게 되는 문제였다.<br>
 순서대로 난쟁이들의 값을 받아와 배열에 저장한 뒤 7명이 되면 합을 구하고 그 합이 100이 된다면 바로 난쟁이들을 출력, 100이 안된다면 리턴해주었다.
