--- a/_posts/BOJ/2022-02-14-BOJ_S2_2961.md
+++ b/_posts/BOJ/2022-02-14-BOJ_S2_2961.md
@@ -95,6 +95,6 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제는 부분 집합 합을 통해 쉽게 풀 수 있었다.<br>
 그러나 공집합의 원소들 때문에 약간 버벅이긴 했다.<br>
