--- a/_posts/BOJ/2022-02-15-BOJ_B1_2839.md
+++ b/_posts/BOJ/2022-02-15-BOJ_B1_2839.md
@@ -41,7 +41,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음에 5 먼저 나누고 다음 3 나누는 방식으로 하나하나 조건으로 들어가다가 조건 만들면 또 다른 조건이 필요하고 그래서 헤매다가<br>
 그냥 20까지 딱 적고 규칙을 보니 규칙들이 존재 했다.<br>
 일단 4,7은 못만들고 5로 나눠서 1,3이 남으면 5로 나눈 몫에 1을 더하고<br>
