--- a/_posts/BOJ/2022-02-15-BOJ_S3_11047.md
+++ b/_posts/BOJ/2022-02-15-BOJ_S3_11047.md
@@ -63,7 +63,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 간단한 문제다.. <br>
 배열 중에 K보다 크면 빼주면서 그 빈도를 카운팅 해주면 된다.<br>
 처음에는 다른 조건들이 있는 줄 알았는데 아무 것도 없어서 간단하게 풀 수 있었다. 
