--- a/_posts/BOJ/2022-02-16-BOJ_B2_1592.md
+++ b/_posts/BOJ/2022-02-16-BOJ_B2_1592.md
@@ -75,6 +75,6 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 간단하게 짝수, 홀수 나눠서 공받으면 카운팅 해주고 M만큼 받은 횟수가 있으면 끝내는 것이다.<br>
 재귀로 풀었어도 괜찮았을 것 같다.
