--- a/_posts/BOJ/2022-02-16-BOJ_S3_11399.md
+++ b/_posts/BOJ/2022-02-16-BOJ_S3_11399.md
@@ -54,7 +54,7 @@ public class Main{
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제는 TestCase를 보면서 규칙을 찾아냈다.<br>
 정렬을 해서 작은 수부터 중첩으로 더해가면 가장 적은 시간이 걸린다는 것을..<br>
 그래서 ArrayList로 입력 받아 정렬하고 순서대로 더해주고 또 중첩해서 더해주고 하였다.
