--- a/_posts/BOJ/2022-02-16-BOJ_S5_11723.md
+++ b/_posts/BOJ/2022-02-16-BOJ_S5_11723.md
@@ -78,7 +78,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제는 어떻게 보면 간단하지만 시간 복잡도 때문에 많은 사람들이 애를 먹는 문제이다.<br>
 나는 어떻게 어떻게 배열로 마무리 했지만 문제의 의도는 비트마스킹을 통해 문제를 푸는 것이다.<br>
 그러나 아직.. 비트마스킹에 대한 이해가 제대로 되어 있지 않아서 나중에 공부를 하고 나면 진행해보겠다<br>
