--- a/_posts/BOJ/2022-02-17-BOJ_B1_2851.md
+++ b/_posts/BOJ/2022-02-17-BOJ_B1_2851.md
@@ -67,7 +67,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 배열로 다 받고 나서 조건마다 나누어 계산을 해주었다.<br>
 스터디원들의 코드를 보니 정말 기발한 수학식도 많았다..<br>
 if문 하나로 끝내는 식도 있었다.. 보면서 가독성도 좋고 간단해서 대단하다 생각했던 것 같다.<br>
