--- a/_posts/BOJ/2022-02-18-BOJ_B2_8320.md
+++ b/_posts/BOJ/2022-02-18-BOJ_B2_8320.md
@@ -41,7 +41,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 문제를 보고 규칙을 먼저 찾아야겠다 생각했다.<br>
 일단 한 줄인 경우는 N개가 나오고<br>
 직사각형의 특성상 x*y이기 때문에 그 곱이 N을 넘으면 안된다.<br>
