--- a/_posts/BOJ/2022-02-18-BOJ_G2_3109.md
+++ b/_posts/BOJ/2022-02-18-BOJ_G2_3109.md
@@ -93,7 +93,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 내가 생각한 여기서 키포인트는 최대의 경우를 구하는 것이기 때문에 오른쪽 위 -> 오른쪽 -> 오른쪽 아래 순으로 탐색을 하는 것 이다.<br>
 그리고 행마다 나눠서 한 줄을 끝까지 다 가게 되면 그 과정은 끝을 내고 다시 다음 행으로 가서 같은 과정을 진행한다.<br>
 기존에 반환값을 void로 받아서 메서드를 끝내야하는데 그전 값으로 돌아가서 메서드에서 나올 수가 없어서 dfs 메서드의 반환값을 boolean으로 설정하였는데 이것이 내가 대면한 문제의 해결책이 되었다. <br>
