--- a/_posts/BOJ/2022-02-18-BOJ_S1_1074.md
+++ b/_posts/BOJ/2022-02-18-BOJ_S1_1074.md
@@ -64,7 +64,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
  해당 구역내에 r,c가 속하는지 체크한다. 만약 존재하면 해당 구역을 4등분으로 나눈다.<br>
  만약 해당 구역에 속하지 않는다면 해당구역의 크기만큼 탐색한 수에 더해준다 !!<br>
  분할 정복 문제이다.
