--- a/_posts/BOJ/2022-02-19-BOJ_B2_2292.md
+++ b/_posts/BOJ/2022-02-19-BOJ_B2_2292.md
@@ -47,7 +47,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 <p align="center"><img src="./../../images/BOJ_2292.jpeg"></p><br>
 6의 배수를 계속 중첩해 더해가는 규칙을 찾았다.<br>
 6, 12, 18, 24 ... 이렇게 더 해질때 마다 한 번씩 카운팅 해주었다.<br>
