--- a/_posts/BOJ/2022-02-19-BOJ_S4_2477.md
+++ b/_posts/BOJ/2022-02-19-BOJ_S4_2477.md
@@ -73,7 +73,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 <p align="center"><img src="./../../images/BOJ_2477.jpeg"></p><br>
 처음에 넓이를 구해야 하기 때문에 전체 공간에서 빈 공간을 빼는 방법을 선택했다.<br>
 그래서 조건을 달며 접근했는데 조건이 너무 많이 달려서 수학적인 방법을 찾아나섰다.<br>
