--- a/_posts/BOJ/2022-02-20-BOJ_B1_3985.md
+++ b/_posts/BOJ/2022-02-20-BOJ_B1_3985.md
@@ -98,7 +98,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 문제가 원하는 조각이 있는데 순서대로 조각을 나눠주다 보니 앞에 사람이 원하는 조각이 같은 경우 앞에 사람이 먼저 가져가는 문제이다.<br>
 여기서 원하는 조각으로 다 받는다면 가장 많이 받을 방청객의 번호와 실제로 가장 많이 받는 방청객의 번호를 출력하는데 <br>
 한가지 조건이 더 존재한다. 바로 받은 조각의 수가 같다면 전에 받은 방청객의 번호를 출력하는 것이다.<br>
