--- a/_posts/BOJ/2022-02-21-BOJ_B1_2999.md
+++ b/_posts/BOJ/2022-02-21-BOJ_B1_2999.md
@@ -63,7 +63,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 먼저 R과 C를 구하는 것이 중요했다.<br>
 가장 R과 C가 비슷한 크기의 배열을 구한 뒤 처음에는 이중 for 문으로 배열을 생성하고 다시 호출하는 구조로 짰는데 런타임 에러가 떠서 다른 방법을 고민하였다.<br>
 고민하다 한 가지 규칙을 발견했다.<br>
