--- a/_posts/BOJ/2022-02-21-BOJ_S2_1260.md
+++ b/_posts/BOJ/2022-02-21-BOJ_S2_1260.md
@@ -87,6 +87,6 @@ public class Main{
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 인접행렬로 이차원배열을 이용해 dfs는 재귀로 bfs는 queue로 구현하였다<br>
 그래프에서의 dfs,bfs를 실습해보는 좋은 문제였다.
