--- a/_posts/BOJ/2022-02-23-BOJ_G5_10026.md
+++ b/_posts/BOJ/2022-02-23-BOJ_G5_10026.md
@@ -102,7 +102,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 dfs와 방향탐색을 합하여 구현하였다.<br>
 먼저 적록색약이 아닌 사람이 봤을 때의 구역의 개수는 처음 위치 부터 4방향 탐색을 하며 dfs() 알고리즘을 수행하면 구역들이 나온다.<br>
 그 구역을 카운팅 해주고 전체 카운팅을 구해주면 된다.<br>
