--- a/_posts/BOJ/2022-02-23-BOJ_S1_2527.md
+++ b/_posts/BOJ/2022-02-23-BOJ_S1_2527.md
@@ -66,7 +66,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 정말.. 눈이 빠질 뻔 했다..ㅠ<br>
 원래 처음에는 좌표들을 기준으로 더 크거나 작거나 비교해서 구현하였는데 <br>
 100%까지 가서 틀렸다고 하는 것을 보면 한 가지 경우의 반례가 있을 것 같았는데 스터디원한테 들어보니 긴 십자가 모양이 반례가 된다는 것이다.<br>
