--- a/_posts/BOJ/2022-02-23-BOJ_S2_4963.md
+++ b/_posts/BOJ/2022-02-23-BOJ_S2_4963.md
@@ -90,7 +90,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 섬이 가로,세로,대각선 까지 연결이 될 수 있어서 8방향 탐색을 사용했다.<br>
 그리고 깊이 우선 탐색을 이용하여 연결되있는 곳들을 파악했다.<br>
 dfs()를 한번 다 실행해주면 카운팅을 해주어 총 섬의 개수를 구해주었다.<br>
