--- a/_posts/BOJ/2022-02-23-BOJ_S3_17413.md
+++ b/_posts/BOJ/2022-02-23-BOJ_S3_17413.md
@@ -81,7 +81,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 보통 단어 뒤집기 문제는 다 stack을 사용하는 것이다. 그러나 이 문제는 괄호를 이용해서 한번 더 꼬아주었다.<br>
 그러나 사실 조건만 추가해주면 되는 부분이라 조건 따라 구현을 해주면 된다. 라고 쉽게 생각 할 수 있지만 난 많이 헤맸다.. ㅋㅋ<br>
 처음에는 크게 조건을 나누어 할 생각을 못하고 문자열을 나눴다가 큐에도 넣을까 생각도 하다가 ㅋㅋ<br>
