--- a/_posts/BOJ/2022-02-26-BOJ_B1_2810.md
+++ b/_posts/BOJ/2022-02-26-BOJ_B1_2810.md
@@ -53,7 +53,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 제일 처음에 설명에 나온 것이 힌트 같아서 *을 넣어주려고 했는데 하다보니 이건 아닌 것 같아 규칙을 찾았다.<br>
 세트 L의 개수에 따라 전체에서 빼지는 값이 규칙적으로 달라지는 것을 파악해 구현하였다.<br>
 LL 세트가 한 개 있으면 전체 에서 한개를 더 빼주면 된다. 두 개 있으면 두개를 빼주고 .. 이런 식의 규칙을 찾았다.<br>
