--- a/_posts/BOJ/2022-02-26-BOJ_B2_3052.md
+++ b/_posts/BOJ/2022-02-26-BOJ_B2_3052.md
@@ -46,7 +46,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 42로 나눈 나머지를 구하는 거라 <br>
 boolean 배열을 이용해 나머지의 유무에 따라 값을 처리해 주었다.<br>
 나머지가 이미 존재하면 넘어가고 없으면 배열을 true로 바꿔주면서 카운팅을 해주었다.<br>
