--- a/_posts/BOJ/2022-02-27-BOJ_B2_8958.md
+++ b/_posts/BOJ/2022-02-27-BOJ_B2_8958.md
@@ -47,7 +47,7 @@ public class Main {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제에서 놓치지 말아야 할 부분은 O가 반복적으로 나오면 계속 값을 1씩 늘려가면서 더해주는 것과<br>
 X일 때는 기존에 값을 더해준 것들을 0으로 초기화 하는 것이다.<br>
 이 두가지만 잘 잡으면 간단하게 풀릴 문제이다.
