--- a/_posts/BOJ/2022-03-03-BOJ_S1_1149.md
+++ b/_posts/BOJ/2022-03-03-BOJ_S1_1149.md
@@ -83,7 +83,7 @@ public class Main {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 DP문제 이다.<br>
 처음에 DFS로 풀어야 되나 생각도 했지만 시간복잡도를 보아하니 DFS로 푸는 것은 아닌 것 같아서 DP로 풀어야 하는 것을 알아냈다.<br>
 확실히 DP문제들은 어떤식의 구조로 계산되는지 빨리 파악하지 못한다면 힘든 것 같다.<br>
