--- a/_posts/BOJ/2022-03-03-BOJ_S3_1904.md
+++ b/_posts/BOJ/2022-03-03-BOJ_S3_1904.md
@@ -39,7 +39,7 @@ public class Main {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 DP문제 이다.<br>
 6까지 구해보고 바로 규칙을 찾아서 (i = (i-1) + (i-2)) 기분이 좋았지만 ..<br>
 런타임 오류가 뜨는 바람에 슬퍼졌었다..ㅋㅋ<br>
