--- a/_posts/BOJ/2022-03-05-BOJ_S1_1932.md
+++ b/_posts/BOJ/2022-03-05-BOJ_S1_1932.md
@@ -52,7 +52,7 @@ public class Main {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 DP 문제이다.<br>
 일단 N이 500개 까지 있기 때문에 DP로 푸는 것을 알았다.<br>
 그림을 그려보았을 때 한 행 밑에 값과 한 행 밑의 오른쪽 값과 비교해서 더 큰 값을 본인 값과 더해주면 되는 규칙을 발견하였다.<br>
