--- a/_posts/SWEA/2022-02-03-SWEA_D2_1954.md
+++ b/_posts/SWEA/2022-02-03-SWEA_D2_1954.md
@@ -117,7 +117,7 @@ public class Solution {
 
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 사각형을 한 변씩 나누어 계산해 주었다. <br>
 N이 짝수일 경우, 홀수일 경우 나누어서 반복문을 사용하였는데,<br>
 뭔가 재귀 함수를 통해서도 할 수 있을 것 같다.<br>
