--- a/_posts/SWEA/2022-02-04-SWEA_D2_2001.md
+++ b/_posts/SWEA/2022-02-04-SWEA_D2_2001.md
@@ -72,7 +72,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음에 TestCase만 보고 3방향으로 가야지 하고 신나서 했는데.. <br>
 바보였다.. ㅋㅋㅋ 문제를 자세히 안 읽은 바보..<br>
 그래서 방향탐색보다 차라리 이중 for문으로 파리채를 탐색하자고 했다.<br>
