--- a/_posts/SWEA/2022-02-04-SWEA_D3_1208.md
+++ b/_posts/SWEA/2022-02-04-SWEA_D3_1208.md
@@ -59,7 +59,7 @@ public class Solution {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제의 핵심은 제일 처음 정렬이기도 하지만 마지막에 한 번더 해주는 정렬인 것 같다.<br>
 마지막에 정렬을 안해주면 값이 다를 수도 있기 때문이다.<br>
 ArrayList와 sort를 쓰면 간단하게 풀릴 문제 !!
