--- a/_posts/SWEA/2022-02-06-SWEA_D3_1209.md
+++ b/_posts/SWEA/2022-02-06-SWEA_D3_1209.md
@@ -97,7 +97,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 비교적 문제 이해가 쉬웠지만 방법이 최선인지는 모르겠다.<br>
 과연 다른 방법이 있을까? 내 머리에서는 최선.. ㅎㅎ<br>
 그리고 BufferedReader와 StringTokenizer를 사용하려고 노력 중인데 StringTokenizer가 좀 .. 오류가 몇 번 떴다.<br>
