--- a/_posts/SWEA/2022-02-07-SWEA_D3_5215.md
+++ b/_posts/SWEA/2022-02-07-SWEA_D3_5215.md
@@ -83,6 +83,6 @@ public class Solution {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 부분 집합의 합으로 풀 수 있었다.<br>
 score 와 cal 의 합들을 구해서 cal 합이 L이하인 것에서 최대 score의 합을 구해내면 된다.
