--- a/_posts/SWEA/2022-02-08-SWEA_D3_1228.md
+++ b/_posts/SWEA/2022-02-08-SWEA_D3_1228.md
@@ -76,7 +76,7 @@ public class Solution {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 값들을 StringTokenizer로 'I'를 경계로 나누고 배열에 저장해 주었다.<br>
 그리고 x 위치에서 y 개수만큼 for문을 통해 arr 리스트에 추가하였다.
 
