--- a/_posts/SWEA/2022-02-08-SWEA_D3_9229.md
+++ b/_posts/SWEA/2022-02-08-SWEA_D3_9229.md
@@ -58,6 +58,6 @@ public class Solution {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이중 for문을 통해 간단히 풀렸다<br>
 완전 검색에 부분집합 합을 사용해서 풀었으면 공부하는 것을 응용하는 것이였는데 문제에서 2개만 선택하라해서 간단히 이중 for문으로 구현하였다.
