--- a/_posts/SWEA/2022-02-09-SWEA_D3_3499.md
+++ b/_posts/SWEA/2022-02-09-SWEA_D3_3499.md
@@ -82,7 +82,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 두 개로 나눠서 사이사이에 넣는 문제인데 , 가장 생각해야 할 것은 input 개수가 짝수인지 홀수인지 이다.<br>
 결과적으로는 그냥 N을 나눠서 두개의 부분으로 구현하였지만 <br>
 다른 기발한 아이디어를 생각해 봤지만 .. 나오지 않았다.. ㅋ_ㅋ
