--- a/_posts/SWEA/2022-02-09-SWEA_D4_1210.md
+++ b/_posts/SWEA/2022-02-09-SWEA_D4_1210.md
@@ -83,7 +83,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 사다리 문제를 보자마자 3방향 탐색과 반대로 올라가야겠다는 생각을 하였다.<br>
 배열에 1인 부분만 따라가면 되는 것이기 떄문에 조건은 다음 원소가 1을 가리키고 isChecked가 false이면 갈 수있는 조건이 되게 하였다.
 
