--- a/_posts/SWEA/2022-02-09-SWEA_D4_1222.md
+++ b/_posts/SWEA/2022-02-09-SWEA_D4_1222.md
@@ -66,6 +66,6 @@ public class Solution{
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 전체 문자열을 순서대로 STACK에 받아와 연산자를 만나면 pop 하여 바로 계산해주도록 하였다.<br>
 이 문제는 "+" 밖에 없었기 때문에 간단하게 풀렸다.
