--- a/_posts/SWEA/2022-02-09-SWEA_D4_1223.md
+++ b/_posts/SWEA/2022-02-09-SWEA_D4_1223.md
@@ -88,7 +88,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제도 구조는 동일하다. 그러나 "*"이 추가되었다.<br>
 전체 문자열을 순서대로 STACK에 받아와 연산자를 만나면 pop 하여 바로 계산해주도록 하였다.<br>
 여기서 주의할 점은 연산순서이다. 곱셈이 덧셈보다 먼저이기 때문에 <br>
