--- a/_posts/SWEA/2022-02-14-SWEA_D3_6808.md
+++ b/_posts/SWEA/2022-02-14-SWEA_D3_6808.md
@@ -125,7 +125,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 순서가 상관있는 뽑기이기 때문에 순열 계산법을 사용하였다.<br>
 처음에 문제를 규영이가 9개를 가져가고 이제 인영이는 18개에서 새롭게 9개를 뽑는 줄 잘못 알아서 시간 초과가 뜨길래 왜인가 했다.. ㅋㅋ><br>
 문제를 천천히.. 꼼꼼히 읽도록 하자 !!
