--- a/_posts/SWEA/2022-02-17-SWEA_D3_2806.md
+++ b/_posts/SWEA/2022-02-17-SWEA_D3_2806.md
@@ -94,7 +94,7 @@ public class Solution{
 ~~~
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 백트래킹을 연습해 볼 수 있는 문제였다.<br>
 특이점은 행과열을 이차원 배열로 받지 않고 하나의 일차배열에 열의 위치값을 넣었다.<br>
 한마디로 for문의 변수는 행이 되고 배열 값은 열이 되는 원리이다.<br>
