--- a/_posts/SWEA/2022-02-18_SWEA_D2_1974.md
+++ b/_posts/SWEA/2022-02-18_SWEA_D2_1974.md
@@ -120,7 +120,7 @@ public class Solution {
 ~~~
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 총 범위가 정해져있어 반복문으로 구해주었다.<br>
 먼저 숫자를 체크해주는 boolean 배열을 하나 선언해주고 <br>
 가로 세로를 먼저 구해주고 다음 사각형부분을 구해주었다.<br>
