--- a/_posts/SWEA/2022-02-22-SWEA_D4_7465.md
+++ b/_posts/SWEA/2022-02-22-SWEA_D4_7465.md
@@ -98,7 +98,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 서로소 집합과 같은 문제이다.<br>
 단지 서로소 집합에서 부모노드들의 개수를 구해주면 된다. 그것이 집합의 수이기 때문이다.<br>
 집합을 합치거나 무리를 구하는 문제 같은 것은 서로소 집합을 구하는 방법과 같이 하면 쉽게 풀린다.
