--- a/_posts/SWEA/2022-02-23-SWEA_D3_4047.md
+++ b/_posts/SWEA/2022-02-23-SWEA_D3_4047.md
@@ -93,7 +93,7 @@ public class Solution {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 먼저 카드 정보를 저장할 배열을 boolean으로 생성하여 영준이가 카드를 가지고 있으면 true를 저장했다.<br>
 그리고 문자 마다 입력받은 수에 값이 있다고 표시해주고, 나중에 표시된 것들의 수를 구해 전체수에서 빼주면 부족한 카드의 숫자가 나온다.<br>
 여기서 flag를 통해 오류를 표시해준다.<br>
