--- a/_posts/SWEA/2022-02-24-SWEA_D3_1869.md
+++ b/_posts/SWEA/2022-02-24-SWEA_D3_1869.md
@@ -85,7 +85,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음 문제를 봤을 때 간단해 보였는데 해줘야 하는 조건들이 은근히 많았다.<br>
 ArrayList로 사람이 오는 시간을 받아 정렬하여 제일 늦게 오는 사람의 시간까지 반복문을 돌리며 붕어빵을 확인한다.<br>
 만약 M초가 되었다면 붕어빵을 K개 만들어주고 사람이 오는 시간이 되었다면 붕어빵을 하나 빼줬다.<br>
