--- a/_posts/SWEA/2022-02-26-SWEA_D2_1859.md
+++ b/_posts/SWEA/2022-02-26-SWEA_D2_1859.md
@@ -62,7 +62,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음에 좀 헤매다가 뒤에서 부터 값들을 비교해서 더하는 것을 깨달았다.<br>
 그러나 여기서 N이 큰 수가 되면 합들이 int 범위를 넘어가서 long으로 해결해 주는 것도 하나의 포인트 였다.<br>
 함정이 좀 있는 문제인 것 같다. 천천히 값들을 잘 보면서 푼다면 그렇게 어려운 문제는 아니였던 것 같다.
