--- a/_posts/SWEA/2022-02-26-SWEA_D3_5356.md
+++ b/_posts/SWEA/2022-02-26-SWEA_D3_5356.md
@@ -56,7 +56,7 @@ public class Solution {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음에 문제를 보고 반복문으로 할 생각을 하였는데, 가변적인 str의 길이를 처리할 방법을 찾지 못하다가<br>
 각 줄의 문자열의 범위가 15까지로 비교적 적은 수여서 다 방문해주고 0이 아닌 배열 값을 출력해 주었다.<br>
 이 문제는 StringBuilder 를 사용하기 제격인 문제 같다.<br>
