--- a/_posts/BOJ/2022-02-07-BOJ_G5_2493.md
+++ b/_posts/BOJ/2022-02-07-BOJ_G5_2493.md
@@ -62,7 +62,7 @@ public class Main {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음에 2중 for문으로 풀었는데 역시 N이 큰 탓인지 시간, 메모리 오류가 떴다.<br>
 그래서 방법을 고민하다가 도저히 생각이 안나서 구글링을 통해 STACK을 통해 푸는 방법을 알게 되었다..<br>
 두 개의 STACK을 이용해 index와 탑의 높이를 push하려는 값이 더 큰경우, 작은경우, STACK이 빈 경우를 나눠서 풀어주었다.<br>
