--- a/_posts/BOJ/2022-02-13-BOJ_S2_1182.md
+++ b/_posts/BOJ/2022-02-13-BOJ_S2_1182.md
@@ -80,6 +80,6 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 부분집합의 합으로 풀어주었다.<br>
 결국 합이 S인 것을 구하는 것이기 때문에 각각의 원소를 다 돌아주면서 더해서 합이 S가 되면 카운팅을 해주고 리턴해준다.
