--- a/_posts/BOJ/2022-02-16-BOJ_B2_2798.md
+++ b/_posts/BOJ/2022-02-16-BOJ_B2_2798.md
@@ -77,7 +77,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 카드 3장을 뽑는 과정이 순서를 상관하지 않기 때문에 조합 구하는 식을 통해 구현하였다.<br>
 합이 M이하 인 것에서 가장 큰 값을 찾아주면 끝 ! <br>
 조합을 구하는 구조만 알면 간단하다 !
