--- a/_posts/BOJ/2022-02-17-BOJ_B1_14696.md
+++ b/_posts/BOJ/2022-02-17-BOJ_B1_14696.md
@@ -125,7 +125,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 나는 이 문제를 보고 입력받은 문자를 정렬하여 그 배열들을 처음부터 비교해서 크면 그 쪽을 출력해주면 되겠다 생각하고 코드를 짰다..<br>
 계속 짜다 보니 조건들이 좀 있어서 코드가 많이 길어졌는데..<br>
 다른 스터디 원들의 코드를 보니.. 훨씬 짧다.. 알고보니 다들 1,2,3,4,5를 배열에 넣어줘서 카운팅을 해줘서 그냥 그 두 배열을 비교한 것이다..<br>
