--- a/_posts/BOJ/2022-02-17-BOJ_G4_1987.md
+++ b/_posts/BOJ/2022-02-17-BOJ_G4_1987.md
@@ -92,7 +92,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 문제를 보고 먼저 순서가 상관이 있기 때문에 순열로 풀어야 겠다는 생각이 들었다.<br>
 그리고 알파벳이 사용되었는지 유무를 파악하기 위해 26개의 원소를 가진 boolean 배열과 계산을 아스키코드를 이용하여 0->A, 1->B .. 이런식으로 정해주었다.<br>
 그리고 재귀로 갔다와서는 백트래킹을 통해 좀 더 효율적인 코드를 작성하였다.<br>
