--- a/_posts/BOJ/2022-02-21-BOJ_B2_13300.md
+++ b/_posts/BOJ/2022-02-21-BOJ_B2_13300.md
@@ -85,7 +85,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 성, 학년 별로 인원의 수를 체크해서 배열에 저장해 주었다.<br>
 그리고 각 성과 학년 별로 돌면서 만약 한 방에 배정되는 최대 인원수보다 적으면 방 한개를 배정했고<br>
 만약 많으면 한 방에 배정되는 최대 인원수를 나누어 나머지가 없으면 몫 만큼 방을 배정했고, 나머지가 있으면 몫 + 1 만큼 방을 배정했다.<br>
