--- a/_posts/BOJ/2022-02-21-BOJ_S5_2941.md
+++ b/_posts/BOJ/2022-02-21-BOJ_S5_2941.md
@@ -73,7 +73,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 문자열 마다 각각 조건을 주어 카운팅을 해주었다.<br>
 거의 2개가 하나의 알파벳이 되어서 i++을 해주며 수를 맞춰주었다.<br>
 그리고 뒤에 것을 검사하므로 배열의 크기 조건도 주었다.
