--- a/_posts/BOJ/2022-02-22-BOJ_B1_10163.md
+++ b/_posts/BOJ/2022-02-22-BOJ_B1_10163.md
@@ -72,7 +72,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 내가 생각한 이 문제의 포인트는 크기를 곱으로 구하는게 아닌 좌표를 이용하여 표시를 해주는 것이다.<br>
 전체 좌표를 배열에 저장하여 제일 먼저 나온 수를 1로 다 칠하고, 다음은 2, 다음은 3 .. 이런 식으로 채워 나간다.<br>
 여기서 배열 값들은 덮어씌워지기 때문에 알아서 겹치는 부분은 가장 최신 값으로 변한다.<br>
