--- a/_posts/BOJ/2022-02-23-BOJ_S2_2644.md
+++ b/_posts/BOJ/2022-02-23-BOJ_S2_2644.md
@@ -88,7 +88,7 @@ public class Main {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제는 처음 보고 집합으로 풀어야 하나 라고 생각을 했는데 트리를 그려보니 위는 1촌 이고 옆은 2촌인데 옆도 결국 펼쳐보면 위로 한 칸 갔다가 다시 밑으로 가는 거여서 그냥 경로의 길이를 구해주면 되는 것이였다.<br>
 그래서 dfs 알고리즘을 이용해서 깊이 우선 탐색을 해주었다.<br>
 그리고 방향성이 없기 때문에 입력을 받을 때 양 방향 다 해주었다.<br>
