--- a/_posts/BOJ/2022-03-04-BOJ_G5_12865.md
+++ b/_posts/BOJ/2022-03-04-BOJ_G5_12865.md
@@ -64,7 +64,7 @@ public class Main{
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제는 대표적인 knapsack 알고리즘을 사용하는 문제이다.<br>
 문제에 무게와 가치가 나온다면 99% knapsack 알고리즘을 사용해야한다.<br>
 이 문제는 dp 배열에 아이템의 무게와 1~K까지의 무게에 가치를 저장한다. <br>
