--- a/_posts/SWEA/2022-02-03-SWEA_D3_1289.md
+++ b/_posts/SWEA/2022-02-03-SWEA_D3_1289.md
@@ -50,7 +50,7 @@ class Solution
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 빈도수만 출력해내면 되는 문제이다.<br>
 그래서 다 바꿔가며 하기보다 언제 빈도수가 증가하는지 찾아보니 0으로 시작하여 숫자가 바뀔 때 빈도수가 증가한다는 것을 알았다.<br>
 그래서 check라는 변수를 통해 빈도수를 구해나갔다.<br>
