--- a/_posts/SWEA/2022-02-04-SWEA_D3_2805.md
+++ b/_posts/SWEA/2022-02-04-SWEA_D3_2805.md
@@ -61,7 +61,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음에는 4방향 탐색으로 접근해볼까 생각했는데, 생각했던 것보다 복잡해서 생각을 좀 바꿔보았다.<br>
 차라리 for 별 찍을때 처럼 문제를 해결하자 ! <br>
 그래서 전체 값들을 다 더해주고 빈 공간을 빼주는 식으로 구조를 짰다.
