--- a/_posts/SWEA/2022-02-08-SWEA_D3_1225.md
+++ b/_posts/SWEA/2022-02-08-SWEA_D3_1225.md
@@ -63,6 +63,6 @@ public class Solution {
 }
 ```
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 한 사이클 구조를 짜는 것은 간단했지만 0일때 암호를 도출하는 것에서 좀 버벅였다.<br>
 그러나 어렵지 않은 과정이였고 Queue를 활용함으로써 좀 더 Queue의 구조를 이해하게 되었다.
