--- a/_posts/SWEA/2022-02-08-SWEA_D3_1229.md
+++ b/_posts/SWEA/2022-02-08-SWEA_D3_1229.md
@@ -98,7 +98,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 전체 값들을 'I'와 'D'를 경계로 나누고<br>
 'D' 배열의 특징은 길이가 3으로 고정인 것이다.<br>
 그 특징을 이용해 'I'는 추가를 'D'는 삭제를 하는 방식으로 작성했다.<br>
