--- a/_posts/SWEA/2022-02-11-SWEA_D4_5432.md
+++ b/_posts/SWEA/2022-02-11-SWEA_D4_5432.md
@@ -67,7 +67,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 이 문제는 STACK을 이용해서 풀어 주었다. <br>
 이벤트가 발생하는 경우는 레이저를 만나는 경우이기 때문에 레이저를 기준으로 경우를 나누었다.<br>
 '(' 이면 add 하고 ')' 인 경우에는 '()'가 한 번에 나오는 레이저인 경우와 바로 나오지 않고 앞에 위치한 ')' 인 경우로 나누어 주었다.<br>
