--- a/_posts/SWEA/2022-02-16-SWEA_D2_1940.md
+++ b/_posts/SWEA/2022-02-16-SWEA_D2_1940.md
@@ -71,7 +71,7 @@ public class Solution{
 ~~~
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음에 문제이해를 잘 못했다.. ㅋㅋㅋ 좀 이상..? <br>
 최종 이해한 것은 0 이면 속도를 유지, 1이면 기존 속도에다가 가속도를 더하고 2면 기존 속도에다가 가속도를 빼는 것이다.<br>
 사람들 말로는 출제자는 물알못이다 이러던데 ㅋㅋㅋ 그래서 이해가 더 힘들었는 것 같기도 하다<br>
