--- a/_posts/SWEA/2022-02-21-SWEA_D4_1238.md
+++ b/_posts/SWEA/2022-02-21-SWEA_D4_1238.md
@@ -91,7 +91,7 @@ public class Solution{
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 일반적으로 boolean으로 bfs()에서 방문 유무를 구하는데 이 문제에서는 int형 배열로 몇번 만에 연결이 되었는지 체크를 해주었다.<br>
 그래서 그 값을 이용해 같은 수 끼리에서도 최댓값을 구해주었다.<br>
 Queue를 이용해서 bfs를 구현해주고 visited 배열을 돌며 가장 뒤에 연락을 받은 사람 중에 가장 큰 수를 구해주었다.<br>
