--- a/_posts/SWEA/2022-02-22-SWEA_D4_3289.md
+++ b/_posts/SWEA/2022-02-22-SWEA_D4_3289.md
@@ -105,7 +105,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 서로소 집합 구하기 문제이다.<br>
 Disjoint - set . makeSet()은 최소 단위 집합을 생성하고 findSet() 은 집합을 찾고 ( 집합 대표자 찾기 ) union()은 집합을 합치는 것이다.<br>
 각각 메서드를 구현하여 연산을 확인하여 그에 맞게 1일 때 같은 집합에 있는지 확인을 해주어서 출력해주면 된다.<br>
