--- a/_posts/SWEA/2022-02-23-SWEA_D3_7964.md
+++ b/_posts/SWEA/2022-02-23-SWEA_D3_7964.md
@@ -73,7 +73,7 @@ public class Solution {
 ```
 
 
-## <b><a style="color:#00adb5">나의 생각</a></b>
+## 🤔 <b><a style="color:#00adb5">나의 생각</a></b>
 처음에 문제가 잘 이해되지 않았지만 한번 그려보면서 이해하니 굉장히 간단한 조건이였다. 그냥 D 이하 안에 관문이 있으면 되고 없으면 관문을 만들어주면 되는 것이다.<br>
 그래서 check라는 변수를 통해 차원 관문의 범위 안에 있는지 확인하고 그 범위를 넘는다면 차원 관문을 하나 추가해준다.<br>
 그것을 끝까지 반복하여 추가해주어야 하는 총 차원 관문 값을 출력한다.<br>
