--- a/_posts/HTML/2022-03-02-HTML.md
+++ b/_posts/HTML/2022-03-02-HTML.md
@@ -18,6 +18,13 @@ sidebar:
 HTML이란 <a style="color:red"><b>Hypertext Markup Language의 약자이며 프로그래밍 언어는 아니고 웹페이지가 어떻게 구조화되어 있는지 브라우저로 하여금 알 수 있도록 하는 마크업 언어</b></a>이다.<br>
 HTML은 웹을 이루는 가장 기초적인 구성 요소로 웹 콘텐츠의 의미와 구조를 정의할 때 사용한다. <br>
 
+## <a style="color:#00adb5">Web & HTML</a> 작동 원리
+- 서버는 클라이언트의 요청 내용을 분석하여 결과값을 HTML로 전송
+- 서버는 결과값을 전송한 후 클라이언트와 연결 종료
+- 클라이언트는 서버로부터 전달받은 HTML을 Web Browser에 표시
+- 각 Web Browser는 브라우저 엔진이 내장되어 있고, 이 엔진이 tag를 해석하여 화면에 표현
+
+<p align="center"><img src="./../../images/web.png"></p>
 
 ## <a style="color:#00adb5">tag</a>와 속성
 HTML은 <a style="color:red"><b>tag</b></a>를 사용하여 문서의 구조 등을 기술한다.<br>
