--- a/_posts/HTML/2022-03-07-HTML_Img.md
+++ b/_posts/HTML/2022-03-07-HTML_Img.md
@@ -14,7 +14,7 @@ sidebar:
 <a style="color:red"><b>웹 페이지 문서 담당 ( 구 조 )</b></a><br>
 <p align="center"><img src="./../../images/hcj.png"></p>
 
-## <a style="color:#00adb5">HTML Table</a> Img
+## <a style="color:#00adb5">HTML </a> Img
 HTML &lt;img&gt; 는 <strong>이미지를 삽입하기 위해 사용</strong>된다.
 - <a style="color:red"><strong>src 속성</strong></a>은 이미지 경로를 지정하기 위해 사용 된다. ( 상대경로, URL 경로 다 가능 )
 - height, width 속성은 이미지 사이즈를 지정하기 위해 사용 된다.
