--- a/_posts/TIL/2022-03-08-220308_TIL.md
+++ b/_posts/TIL/2022-03-08-220308_TIL.md
@@ -12,6 +12,8 @@ sidebar:
 
 ## <a style="color:#00adb5">Today I Learned</a>
 - HTML - Semantic
+- JavaScript - Window 객체
 - JavaScript 강의 마무리
+
 
 ## <a style="color:#00adb5">Today I Thought</a>
