--- a/_posts/TIL/2022-03-08-220308_TIL.md
+++ b/_posts/TIL/2022-03-08-220308_TIL.md
@@ -19,9 +19,8 @@ sidebar:
 
 
 ## <a style="color:#00adb5">Today I Thought</a>
-오늘은 JavaScript를 끝마쳤다.. 겁나 빠르다 ㅋㅋ<br>
-확실히 JS까지 웹 코딩에 넣고 나니 좀 웹 같은 느낌이 들었다. 그 전 까지는 진짜 너무 껍데기인 느낌 ?<br>
-그리고 오늘 LIS 알고리즘에 대해 공부했는데 약간 어려운 것 같다. 내가 이분 탐색을 잘 못해서 정확히 이해를 못하나 싶었는데 좀 어렵긴 하다고 한다.<br>
-그리고 시간 복잡도가 dp로 접근하면 제한 되는 N의 개수가 있어서 그냥 처음 부터 O(NlogN) 인 이분 탐색으로 접근했다.<br>
-한 방에 모든 문제를 끝내는게 낫지 않을까? ㅎㅎ 아직은 잘 모르지만 문제를 더 풀어보면서 파악해야겠다. <br>
-내일은 선거날이니까 선거하고 밀렸던 정리들을 더 해야겠다 !!
+오늘은 JavaScript를 끝마쳤다.. 겁나 빠르다 ㅋㅋ <br>
+확실히 JS 까지 웹 코딩에 넣고 나니 좀 웹 같은 느낌이 들었다. 그 전 까지는 진짜 껍데기만 있는 느낌 ? <br>
+그리고 오늘 LIS 알고리즘에 대해 공부했는데 난이도가 좀 있다. 내가 이분 탐색을 잘 못해서 정확히 이해를 못하나 싶었는데 다른 사람들도 어렵다고 한다. <br>
+그리고 시간 복잡도가 dp로 접근하면 제한 되는 N 의 개수가 있어서 그냥 처음 부터  O(NlogN) 인 이분 탐색으로 접근했다.<br>
+한 방에 모든 문제를 끝내는게 낫지 않을까? ㅎㅎㅎ 아직은 잘 모르지만 문제를 더 풀어보면서 파악해야겠다. <br>
