--- a/_posts/ALGORITHM/2022-02-11-STACK.md
+++ b/_posts/ALGORITHM/2022-02-11-STACK.md
@@ -9,7 +9,7 @@ sidebar:
     nav: "docs"
 ---
 
-# <a style="color:#00adb5">STACK</a>
+# 📚 <a style="color:#00adb5">STACK</a>
 
 ## <a style="color:#00adb5">스택</a>이란 무엇인가 ?
 <p align="center"><img src="./../../images/STACK.gif"></p><br>
