--- a/_posts/ALGORITHM/2022-02-12-BFS_DFS.md
+++ b/_posts/ALGORITHM/2022-02-12-BFS_DFS.md
@@ -9,7 +9,7 @@ sidebar:
     nav: "docs"
 ---
 
-# <a style="color:#00adb5">BFS & DFS</a>
+# 📚 <a style="color:#00adb5">BFS & DFS</a>
 
 ## <a style="color:#00adb5">BFS ( Breadth First Search )</a>이란 무엇인가 ?
 <p align="center"><img src="./../../images/BFS.gif"></p><br>
