--- a/_posts/ALGORITHM/2022-02-15-Tree.md
+++ b/_posts/ALGORITHM/2022-02-15-Tree.md
@@ -9,7 +9,7 @@ sidebar:
     nav: "docs"
 ---
 
-# <a style="color:#00adb5">트리 ( Tree )</a>
+# 📚 <a style="color:#00adb5">트리 ( Tree )</a>
 
 ## <a style="color:#00adb5">트리</a>란 무엇인가 ?
 <p align="center"><img src="./../../images/Tree.jpg"></p>
