--- a/_posts/TIL/2022-03-09-220309_TIL.md
+++ b/_posts/TIL/2022-03-09-220309_TIL.md
@@ -11,6 +11,15 @@ sidebar:
 
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
-- 
+- JavaScript - DOM, Event, Web Storage
+- JavaScript 실습
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 선거날이다.<br>
+JavaScript 정리를 다 끝냈다 ㅎㅎ 빨리 끝낸거 같아 기분이 좋지만 아직 많이 부족해서 걱정이긴하다..<br>
+당장 금요일에 프로젝트를 한다는데..ㅋㅋ <br>
+다 끝내고 나서 개표하는 것 좀 보다가 마지막으로 JS 실습을 하였다. 바로 딱 나오진 않지만 이거 여기 있던 건데 하고 찾으면서 해나갔다.<br>
+그래도 모르겠는건 모르겠더라.. ㅋㅋ 그리고 완전 처음부터 HTML, CSS, JS 다 짜라하면 절대는 아니지만 시간이 많이 걸릴 것 같다..<br>
+뭔가 느낀게 웹을 어떻게 구성할지도 굉장히 중요한 생각인 것을 공부하면서 느꼈다. 실습을 하는데 이 구조를 어떻게 생각해냈을까.. 라는 생각이 들면서 
+구조를 체계적으로 잘 짜놔야지 완성도 있는 웹이 나오겠구나 라는 생각을 하였다.<br>
+곧 웹을 만들어 볼 기회가 프로젝트를 통해 많을 텐데 열심히 해야 겠다 !!
