--- a/_posts/TIL/2022-03-10-220310_TIL.md
+++ b/_posts/TIL/2022-03-10-220310_TIL.md
@@ -13,7 +13,14 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a>
 - jQuery, AJAX, 비동기 통신 학습
 - 알고리즘 강의 
+- localStorage 실습
 - AJAX 실습
 - BOJ_9251
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 진도도 많이 나가고 실습도 많이해서 복습을 못했다.. 그래도 알골 한 문제 해서 그나마 마음이 놓인다.<br>
+오늘 배운 것들은 다 .. 이제 .. 안쓰..는 ㅋㅋㅋㅋ 그런 것들이다.. 그걸 알고 듣다보니 집중도 안되고.. 이러면 안되는데.. ㅎ<br>
+그래도 오늘 집중을 안한 만큼 뒤에 가서 더 집중해서 하는 걸로 !!<br>
+오늘 서울대에서 교수님? 이 오셔서 알고리즘에 대해 설명을 해주셨다. 역사나 가장 대표적인 것들이나 그러다가 나중에 우리를 위해 얘기를 좀 해주셨는데 기억에 남은 말이 있다.<br>
+교수님도 영화에 나온 걸 인용하셨지만 ' 고수에게 인생은 놀이터요, 하수에게는 지옥이라고 했다.' 라는 말이 기억에 남았다.<br>
+그 말을 듣고 인생을 놀이터로 만들자 라는 생각을 하게 되었다 !! 이 마음 굳게 다지고 내일도 화이팅 😊
