--- a/_posts/TIL/2022-03-15-220315_TIL.md
+++ b/_posts/TIL/2022-03-15-220315_TIL.md
@@ -17,3 +17,9 @@ sidebar:
 - DB 복습
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 DB를 처음으로 배웠다. 개인적으로 sqld 자격증도 보유하고 있지만 just 자격증이기 때문에.. 정작 중요한 것은 DB를 얼마나 적재적소에 잘 다루냐이다. 사실 다뤄본적은 손에 꼽는다.. 프로젝트 할 때 몇 번? ㅋㅋ 그것도 select만 몇 번써봐서 ..<br>
+기초부터 탄탄히 다져가야 한다. 뒤로 가면 갈수록 확 복잡하고 어려워지기 때문에 ( 정규화, join, subquery ..) 화이팅이다..<br>
+그리고 삼성 A형 시험 쳤는데 .. 하나도 못 풀었다. 좀 뭔가 아이디어가 나올만 하면 걸리고 나올만하면 걸려서.. 그냥 1시간 30분 보다가 포기하고 나와서 DB 정리 했다. ㅋㅋ <br>
+확실히 IM이랑은 차원이 다르다 ㅎㅎ 문제 길이도 다르고 고려해야 할 것도 많고. 근데 못하겠다 이건 아닌 것 같다.<br>
+그래도 처음으로 그 코테 정도의 난이도를 알게 되어서 더 빡세게 해야겠다는 생각이 들었다.<br>
+일단 밀린 것들 빨리 쳐내고 알골 공부를 다시 달리도록 해야겠다 !! 알골 공부는 꾸준하게 !!
