--- a/_posts/DATABASE/2022-03-15-DB_Basic.md
+++ b/_posts/DATABASE/2022-03-15-DB_Basic.md
@@ -262,7 +262,7 @@ transaction 이란 데이터베이스의 논리적 연산 단위
 - ER Diagram ( ERD )<br>
 개체 타입과 관계타입을 기본 개념으로 현실 세계를 개념적으로 표현하는 방법<br>
 
-<img width=100% src="./../../images/erd.webp">
+<img width="100%" src="./../../images/erd.webp">
 
 
 
@@ -313,14 +313,16 @@ NULL 값이 들어올 경우 기본 설정되는 값을 지정
 현재 가장 많이 쓰이고 있는 데이터베이스의 한 종류이다.<br>
 테이블로 이루어져 있으며 이 테이블은 키와 값의 관계를 나타낸다.<br>
 
-<img width=100% src="./../../images/rdb.png">
+
+<img width="100%" src="./../../images/rdb.png" />
 
 ## <a style="color:#00adb5">RDB ( Relational DataBase )</a> 의 특징
 - 데이터의 분류, 정렬, 탐색 속도가 빠르다.
 - 오랫동안 사용된 만큼 신뢰성이 높고, 어떤 상황에서도 데이터의 무결성을 보장해 준다.
 - 기존에 작성된 스키마를 수정하기가 어렵다.
 - 데이터베이스의 부하를 분석하는 것이 어렵다.
-
+<br>
+<br>
 
 # 📚 <a style="color:#00adb5">DBMS ( DataBase Management System )</a>
 
