--- a/_posts/DATABASE/2022-03-15-DB_Basic.md
+++ b/_posts/DATABASE/2022-03-15-DB_Basic.md
@@ -228,12 +228,21 @@ DB, Table의 접근 권한 이나 CRUD 권한을 정의한다.<br>
 데이터베이스 객체에 <a style="color:red"><strong>권한을 부여</strong></a>
 
 ```sql
+grant create user, alter user, drop user
+to js with admin option;
+
+-> js에게 create, alter, drop 권한을 준다. ( 객체는 select, insert .. 도 가능 )
+-> with admin option 은 권한 받은 사용자가 다른 사용자에게도 권한을 부여할 수 있는 것
 ```
 
 - <strong>revoke</strong><br>
 데이터베이스 객체 <a style="color:red"><strong>권한을 취소</strong></a>
 
 ```sql
+revoke create user, alter user, drop user
+from js;
+
+-> js에게서 create, alter, drop 권한을 회수한다.
 ```
 
 
@@ -241,17 +250,39 @@ DB, Table의 접근 권한 이나 CRUD 권한을 정의한다.<br>
 <a style="color:red"><strong>트랜잭션 제어어</strong></a><br>
 transaction 이란 데이터베이스의 논리적 연산 단위
 
+```sql
+use jsdb;
+
+create table test(
+    var varchar(10)
+);
+
+start transaction;
+
+insert into test
+values('a');
+
+insert into test
+values('b');
+
+commit;
+-- 여기까지 a,b 저장
+
+insert into test
+values('c');
+
+rollback;
+-- commit한 상태로 돌아감 -> c는 저장 안됨
+
+
+-> savepoint f1으로 저장하고 rollback to f1으로 돌아갈 수도 있다.
+```
+
 - <strong>commit</strong><br>
 실행한 Query를 <a style="color:red"><strong>최종적으로 적용</strong></a>
 
-```sql
-```
-
 - <strong>rollback</strong><br>
 실행한 Query를 마지막 commit 전으로 취소시켜 <a style="color:red"><strong>데이터를 복구</strong></a>
-
-```sql
-```
 
 
 ### <a style="color:#00adb5">테이블 생성 </a>
