--- a/_posts/DATABASE/2022-03-15-DB_Basic.md
+++ b/_posts/DATABASE/2022-03-15-DB_Basic.md
@@ -40,7 +40,7 @@ sidebar:
 데이터베이스 객체를 <a style="color:red"><strong>생성</strong></a>
 
 ```sql
-dbtest 데이터베이스 생성
+-> dbtest 데이터베이스 생성
 
 create database dbtest
 default character set utf8mb3 collate utf8mb3_general_ci;
@@ -48,9 +48,20 @@ default character set utf8mb3 collate utf8mb3_general_ci;
 ( character set은 각 문자가 컴퓨터에 저장될 때 어떠한 코드로 저장 될지에 대한 규칙의 집합을 의미한다 )
 ( Collation은 특정 문자 셋에 의해 데이터베이스에 저장된 값들을 비교 검색하거나 정렬 등의 작업을 위해 문자들을 서로 " 비교 " 할 때 사용하는 규칙들의 집합을 의미한다. )
 
+
+-> user 테이블 생성
+
+create table 'user'(
+    `id` varchar(40) not null,
+    `password` varchar(40) not null,
+    `name` varchar(40) not null,
+    `email` varchar(40) not null,
+    `age` int not null
+)
+
 -------------------------------------------------------------------------------------------------------
 
-dbtest 데이터베이스 사용
+-> dbtest 데이터베이스 사용
 
 use dbtest;
 
@@ -61,19 +72,34 @@ use dbtest;
 기존에 존재하는 데이터베이스 객체를 <a style="color:red"><strong>수정</strong></a>
 
 ```sql
-dbtest 데이터베이스 수정 ( 이모지 사용 가능한 것으로 )
+-> dbtest 데이터베이스 수정 ( 이모지 사용 가능한 것으로 )
 
 alter database dbtest
 default character set utf8mb4 collate utf8mb4_general_ci;
+
+-> user 테이블에 phone_number(int) 컬럼 삽입
+alter table 'user' add column 'phone_number' int;
+
+-> user 테이블의 phone_number 컬럼을 varchar(40), not null 로 변경
+alter table 'user' modify column 'phone_number' varchar(40) not null;
+
+-> phone_number 컬럼 삭제
+alter table 'user' drop column 'phone_number';
 ```
 
 - <strong>DROP</strong><br>
 데이터베이스 객체를 <a style="color:red"><strong>삭제</strong></a>
 
 ```sql
-dbtest 데이터베이스 삭제
+-> dbtest 데이터베이스 삭제
 
 drop database dbtest;
+
+-> user 테이블 삭제
+drop table 'user';
+
+-> 만약 user 라는 테이블이 있으면 삭제
+drop table if exists 'user';
 ```
 
 
