--- a/_posts/TIL/2022-03-17-220317_TIL.md
+++ b/_posts/TIL/2022-03-17-220317_TIL.md
@@ -16,3 +16,11 @@ sidebar:
 - DML, DDL 실습
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 DB의 꽃인 Join과 Subquery를 학습하고 정리하였다.<br>
+원하는 데이터가 정말 복잡하게 있으면 난이도가 엄청 상승하는 부분이다..<br>
+그래도 어느정도 구조는 파악한 것 같아 다행이긴 하다.. 사실 아직 어려운 문제를 안봐서 그럴 수도 ㅎㅎ<br>
+DB를 배우다 보니 빨리 JAVA랑 연결해서 데이터 가져오고 하는 것을 해보고 싶다.<br>
+너무 재밌을 것 같은 느낌이 든다 ㅎㅎ 빨리 DB 다 배우고 HappyHouse 프로젝트하고 있는 것에 넣고 실행해 보고 싶다.<br>
+근데.. 부트스트랩으로 바꿔야하는데.. 주말에 해야겠지..? ㅋㅋㅋ 다음주 월욜 DB 프로젝트라는데..<br>
+일단 내일 JDBC하고 DB를 거의 마무리 짓고 해봐야겠다..<br>
+알골은 아쉽게도 못풀었다.. 아쉽쓰..😓
