--- a/_posts/DATABASE/2022-03-17-DB_Join.md
+++ b/_posts/DATABASE/2022-03-17-DB_Join.md
@@ -12,7 +12,7 @@ sidebar:
 # 📚 <a style="color:#00adb5">DB ( DataBase )</a>
 <img width="100%" src="./../../images/db.png">
 
-## <a style="color:#00adb5">JOIN</a>
+## <a style="color:#00adb5">DATABASE JOIN</a>
 - <a style="color:red"><strong>둘 이상의 테이블에서 데이터가 필요한 경우 테이블을 합쳐 SELECT 하는 방법이 Join</strong></a>이다.
 - 일반적으로 조인 조건을 포함하는 WHERE 절을 작성해야 한다.
 - 조인 조건은 일반적으로 각 테이블의 PK 및 FK 키로 구성된다.
@@ -154,7 +154,7 @@ where e.salary between s.losal and s.hisal;
 --> salgrades 테이블에 losal, hisal 범위 간에 등급이 나누어져 있다.
 ```
 
-## <a style="color:#00adb5">DATABASE</a> JOIN 마무리
+## <a style="color:#00adb5">DATABASE JOIN</a> 마무리
 DB의 꽃인 JOIN을 배워보았다.<br>
 SQL문을 작성할 때 순서대로 생각하며 작성하는 것이 가장 중요할 것 같다.<br>
 그리고 국어 ! 를 잘해야한다.. ㅋㅋ 테이블의 구조도 잘 알아야하고.. 그래야 JOIN문을 유용하게 사용할 수 있을 것 같다.<br>
