--- a/_posts/CSS/2022-03-03-CSS_Baisc.md
+++ b/_posts/CSS/2022-03-03-CSS_Baisc.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "CSS Basic"
+title:  "CSS_Basic"
 categories: 
     - CSS
 tags: 
@@ -10,9 +10,13 @@ sidebar:
 ---
 
 # 📚 <a style="color:#00adb5">CSS</a>
-<b>웹 문서를 구성하는 3가지 요소</b>
-<a style="color:red"><b>웹 페이지 디자인 담당 ( 표 현 )</b></a><br>
-<p align="center"><img src="./../../images/hcj.png"></p>
+
+<center>
+<img width="90%" src="./../../images/css.png">
+</center>
+<br>
+
+# 📚 <a style="color:#00adb5">Basic</a>
 
 ## <a style="color:#00adb5">CSS</a>이란 무엇인가 ?
 <a style="color:red"><b>cascading Style Sheets의 약자이며 HTML이나 XML로 작성된 문서의 표시 방법을 기술하기 위한 스타일 시트 언어</b></a>이다.<br>
