--- a/_posts/HTML/2022-03-07-HTML_Img.md
+++ b/_posts/HTML/2022-03-07-HTML_Img.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "HTML Img"
+title:  "HTML_Img"
 categories: 
     - HTML
 tags: 
@@ -10,11 +10,15 @@ sidebar:
 ---
 
 # 📚 <a style="color:#00adb5">HTML</a>
-<b>웹 문서를 구성하는 3가지 요소</b>
-<a style="color:red"><b>웹 페이지 문서 담당 ( 구 조 )</b></a><br>
-<p align="center"><img src="./../../images/hcj.png"></p>
 
-## <a style="color:#00adb5">HTML </a> Img
+<center>
+<img width="90%" src="./../../images/html.png">
+</center>
+<br>
+
+# 📚 <a style="color:#00adb5">Img</a>
+
+## <a style="color:#00adb5">HTML Img</a> 란 무엇인가?
 HTML &lt;img&gt; 는 <strong>이미지를 삽입하기 위해 사용</strong>된다.
 - <a style="color:red"><strong>src 속성</strong></a>은 이미지 경로를 지정하기 위해 사용 된다. ( 상대경로, URL 경로 다 가능 )
 - height, width 속성은 이미지 사이즈를 지정하기 위해 사용 된다.
