--- a/_posts/DATABASE/2022-03-15-DB_Basic.md
+++ b/_posts/DATABASE/2022-03-15-DB_Basic.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "DATABASE Basic"
+title:  "DATABASE_Basic"
 categories: 
     - DATABASE
 tags: 
@@ -10,8 +10,13 @@ sidebar:
 ---
 
 # 📚 <a style="color:#00adb5">DB ( DataBase )</a>
-<img width="100%" src="./../../images/db.png">
 
+<center>
+<img width="90%" src="./../../images/database.png">
+</center>
+<br>
+
+# 📚 <a style="color:#00adb5">Basic</a>
 
 ## <a style="color:#00adb5">DB ( DataBase )</a> 란 무엇인가 ?
 <strong>데이터베이스 ( DB : database )</strong> 는 <a style="color:red"><strong>통합하여 관리되는 데이터의 집합체를 의미</strong></a>한다.<br>
@@ -24,6 +29,12 @@ sidebar:
 - 사용자들이 원하는 <strong>데이터를 동시에 공유</strong>할 수 있다.
 - 사용자가 원하는 데이터를 주소가 아닌<strong>내용에 따라 참조</strong>할 수 있다.
 - 응용프로그램과 데이터베이스는 독립되어 있으므로, 데이터의 논리적 구조와 응용프로그램은 별도로 동작된다.
+<br>
+<figure style="text-align:center;">
+<figcaption style="color:red; font-weight:bold; font-size:25px">DB 동작 과정</figcaption><br>
+<img width="100%" src="./../../images/db.png">
+</figure>
+
 
 ## <a style="color:#00adb5">SQL ( Structured Query Language ) </a>
 <strong>SQL ( Structured Query Language )</strong> 은 데이터베이스에서 <a style="color:red"><strong>데이터를 정의, 조작, 제어하기 위해 사용하는 언어</strong></a>이다.<br>
