--- a/_posts/DATABASE/2022-03-17-DB_Join.md
+++ b/_posts/DATABASE/2022-03-17-DB_Join.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "DATABASE JOIN"
+title:  "DATABASE_JOIN"
 categories: 
     - DATABASE
 tags: 
@@ -10,9 +10,15 @@ sidebar:
 ---
 
 # 📚 <a style="color:#00adb5">DB ( DataBase )</a>
-<img width="100%" src="./../../images/db.png">
 
-## <a style="color:#00adb5">DATABASE JOIN</a>
+<center>
+<img width="90%" src="./../../images/database.png">
+</center>
+<br>
+
+# 📚 <a style="color:#00adb5">JOIN</a>
+
+## <a style="color:#00adb5">JOIN</a> 이란 무엇인가?
 - <a style="color:red"><strong>둘 이상의 테이블에서 데이터가 필요한 경우 테이블을 합쳐 SELECT 하는 방법이 Join</strong></a>이다.
 - 일반적으로 조인 조건을 포함하는 WHERE 절을 작성해야 한다.
 - 조인 조건은 일반적으로 각 테이블의 PK 및 FK 키로 구성된다.
