--- a/_posts/HTML/2022-03-06-HTML_list.md
+++ b/_posts/HTML/2022-03-06-HTML_list.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "HTML 목록형 요소"
+title:  "HTML_목록형 요소"
 categories: 
     - HTML
 tags: 
@@ -10,11 +10,15 @@ sidebar:
 ---
 
 # 📚 <a style="color:#00adb5">HTML</a>
-<b>웹 문서를 구성하는 3가지 요소</b>
-<a style="color:red"><b>웹 페이지 문서 담당 ( 구 조 )</b></a><br>
-<p align="center"><img src="./../../images/hcj.png"></p>
 
-## <a style="color:#00adb5">HTML 목록형 요소</a>
+<center>
+<img width="90%" src="./../../images/html.png">
+</center>
+<br>
+
+# 📚 <a style="color:#00adb5">목록형 요소</a>
+
+## <a style="color:#00adb5">HTML 목록형 요소</a> 란 무엇인가?
 - 목록 tag는 하나 이상의 하위 tag를 포함한다.
 - 목록 tag는 각 항목을 들여쓰기로 표현한다.
 - 번호 또는 심볼을 이용해서 목록을 표현한다.
