--- a/_posts/TIL/2022-03-19-220319_TIL.md
+++ b/_posts/TIL/2022-03-19-220319_TIL.md
@@ -13,6 +13,13 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
 - BOJ_1107
 - 순조부 다시 정리
+- jQuery 복습
+- Bootstrap 복습
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘 드디어 알고리즘 문제를 풀었다 ㅎㅎ<br>
+그러나 제대로 못하는 바람에 2시간이나 넘게 걸렸다.. 머리 깨질뻔.. 어려운 문제는 아니였는데 너무 복잡하게 생각한 것 같다..<br>
+그리고 월요일 시험 대비해서 복습을 했는데 jQuery를 사용하는 것을 거의 까먹은 것 같아 다시 복습하고 저번에 못들었던 강의 Bootstrap 강의를 들었다.<br>
+Bootstrap은 정말 많은 양식? 이 있어서 너무 편하게 쓰일 것 같다.. 기존에 HTML, CSS로 만든 HAPPYHOUSE 프로젝트를 바꿔야하는ㄷ ㅔ ㅔ ㅔ..<br>
+할 일이 산더미네 .. 후우 일단 다음주 월욜 시험 대비 공부 열시미 !!
