--- a/_posts/TIL/2022-03-22-220322_TIL.md
+++ b/_posts/TIL/2022-03-22-220322_TIL.md
@@ -12,8 +12,17 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
 - Servlet, JSP 학습
+- Servlet 실습
 - 웹의 구조 복습
 - BOJ_1780
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘부터 진정한 백엔드를 시작했다.<br>
+servlet과 jsp에 대해 배웠는데.. 오우 폭풍이 지나갔따 ㅋㅋㅋ<br>
+솔직히 현재 개발 환경에서는 사용되지 않지만 다 기초적인 부분이라 알고가야 하는 것이라고 한다.<br>
+솔직히 좋은 점이 그냥 개인적으로 백엔드 공부를 했다면 이런 부분들은 하나도 안하고 바로 라이브러리나 프레임워크를 공부했을 텐데 기초부터 배워가니 좀 더 나중에 여러 라이브러리나 프레임워크를 쓰더라도 어떻게 더 편해졌고 어떻게 더 좋아졌는지 알게되며 이해가 더 잘 될 것 같다는 생각이 들었다.<br>
+솔직히 이제 안쓰이는건데.. 막말로 몇일만 지나도 안쓸수도 있는데 라는 생각을 하며 정리할까 말까 생각했지만 정리하기로 마음먹었다 ㅎㅎ 정확히는 몰라도 어떤건지 어떤구존지 알고 있으면 나중에 도움이 될 것 같다라는 생각이 들었다. 물론 나중에 내가 이걸 잘 쓸 줄 안다 라고 말할 것은 절대 아니다. 내 성격에 그렇게 말하고 가서 못하는 것을 더 싫어한다.<br>
+그리고 웹의 아키텍쳐에 대해 공부했는데 확실히 머리에 박았다. 이제 어떻게 공부해나가야하고 어떻게 연관이 되어있는지 깨달았다. 가장 중요한 시작 부분이라고 말할 수 있을 것 같다 ㅎㅎ<br>
+이제 더 바빠질 텐데 더 빡세게 하자 !! 알고리즘도 놓지말고 !!<br>
+못풀더라도 적어도 1시간은 고민하자 !!
