--- a/_posts/TIL/2022-03-23-220323_TIL.md
+++ b/_posts/TIL/2022-03-23-220323_TIL.md
@@ -12,5 +12,16 @@ sidebar:
 
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
 - Servlet, JSP 복습, 정리
+- BOJ_11659
+- Notion 계획, 정리 표 시작
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 하루종일 webex 에서 실습하며 servlet 과 JSP 를 공부하였다.<br>
+그리고 정리도 했다.<br>
+이제 웹을 하면서 느낀 거는 정리도 중요한데 실습이 더 중요한 것 같다.<br>
+어떤 식으로 데이터가 주고 받아지는지 오류에는 어떤 것이 있는지 등등<br>
+그리고 알고리즘 문제하나 풀었다. 근데 너무 쉬워서 후다닥 풀었는데? 시간초과 ㅋㅋ 시간복잡도를 생각안했던 것이다..<br>
+너무 쉽다 했다 .. ㅋㅋ 그래서 다시 문제를 풀었다. 그래도 매일 풀려는 노력이 헛되지 않았으면 한다 !!<br>
+그리고 오늘부터 Notion에 친구들이랑 같이 하루 일기? 계획? 같은 것을 쓰기로 했다.<br>
+친구 2명은 미리 쓰고 있었는데 한 1주일? 정도 되었다고 한다. 같이 쓸래라고 묻길래 계획을 하고 싶었던 나는 바로 망설임 없이 오케이 했따 ㅎㅎ<br>
+앞으로 꾸준하게 잘 써봐야지 !! 아침에는 계획표 ! 저녁에는 정리 !
