--- a/_posts/WEB/2022-03-23-WEB_JSP.md
+++ b/_posts/WEB/2022-03-23-WEB_JSP.md
@@ -135,13 +135,115 @@ HTML 주석은 출력하면 HTML 에서만 주석 처리 되고 전체적인 구
 
 ## <a style="color:#00adb5">JSP</a> 지시자 ( Directive )
 
-### <a style="color:#00adb5">지시자 - page</a> 
+### <a style="color:#00adb5">page Directive</a> 
+<a style="color:red"><strong>컨테이너에게 현재 JSP 페이지를 어떻게 처리할 것이나에 대한 정보를 제공</strong></a>한다.
+
+```jsp
+형식
+<%@ page attr1="val1" attr2="val2" ... %>
+```
+
+- language<br>
+스크립트에서 사용 할 언어 지정 ( default : java )
+
+- info<br>
+현재 JSP 페이지에 대한 설명
+
+- <a style="color:#00adb5"><strong>contentType</strong></a><br>
+브라우저로 내보내는 내용의 MIME 형식 지정 및 문자 집합 지정 ( default : text/html;charset=ISO-8859-1 )
+
+- pageEncoding<br>
+현재 JSP 페이지 문자집합 지정 ( default : ISO-8859-1 )
+
+- <a style="color:#00adb5"><strong>import</strong></a><br>
+현재 JSP 페이지에서 사용할 JAVA 패키지나 클래스를 지정
+
+- session<br>
+세션의 사용 유무 설정 ( default : true )
+
+- errorPage<br>
+에러가 발생할 때에 대신 처리될 JSP 페이지 지정
+
+- isErrorPage<br>
+현재 JSP 페이지가 에러 핸들링 하는 페이지인지 지정하는 요소 ( default : false )
+
+- buffer<br>
+버퍼의 크기 ( default : 8KB )
+
+- autiflush<br>
+버퍼의 내용을 자동으로 브라우저로 보낼 지에 대한 설정 ( default : true )
+
+- isThreadsafe<br>
+현재 JSP 페이지가 멀티 쓰레드로 동작해도 안전한지 여부를 설정하는 것으로 false 인 경우 JSP 페이지는 SingleThread로 서비스 된다. ( default : true )
+
+- extends<br>
+현재 JSP 페이지를 기본적인 클래스가 아닌 다른 클래스로 부터 상속하도록 변경 ( default : javax.servlet.jsp.HttpJspPage )
+
+
+
+### <a style="color:#00adb5">include Directive</a> 
+특정 jsp file을 페이지에 포함<br>
+여러 jsp 페이지에서 <a style="color:red"><strong>반복적으로 사용되는 부분을 jsp file로 만든 후 반복 영역에 include 시켜 반복되는 코드를 줄일 수 있다.</strong></a>
+
+```jsp
+형식
+<%@ include file="/template/header.jsp" %>
+```
+
+### <a style="color:#00adb5">taglib Directive</a> 
+JSTL 또는 사용자에 의해서 만든 커스텀 태그 를 이용할 때 사용되며 <a style="color:red"><strong>JSP 페이지 내에 불필요한 자바 코드를 줄일 수 있다.</strong></a>
+
+```jsp
+형식
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+```
+
 
 ## <a style="color:#00adb5">JSP</a> 기본 객체
 
 ### <a style="color:#00adb5">기본 객체</a> 
 
+- request<br>
+HTML 폼 요소의 선택 값 등 사용자 입력 정보를 읽어올 때 사용
+
+- response<br>
+사용자 요청에 대한 응답을 처리하기 위해 사용
+
+- pageContext<br>
+각종 기본 객체를 얻거나 forward 및 include 기능을 활용할 때 사용
+
+- session<br>
+클라이언트에 대한 세션 정보를 처리하기 위해 사용<br>
+page directive의 session 속성을 false로 하면 내장 객체는 생성이 안된다.
+
+- application<br>
+웹 서버의 애플리케이션 처리와 관련된 정보를 레퍼런스하기 위해 사용
+
+- out<br>
+사용자에게 전달하기 위한 output 스트림을 처리할 때 사용
+
+- config<br>
+현재 JSP에 대한 초기화 환경을 처리하기 위해 사용
+
+- page<br>
+현재 JSP 페이지에 대한 참조 변수에 해당됨
+
+- exception<br>
+Error를 처리하는 JSP에서 isErrorPage 속성을 true로 설정하면 exception 내장 객체를 사용할 수 있고 기본은 false로 설정되어 있다. 전달된 오류 정보를 담고 있는 내장 객체
+
 ### <a style="color:#00adb5">기본 객체의 영역 ( Scope )</a> 
+
+- pageContext<br>
+    - 하나의 JSP 페이지를 처리할 때 사용되는 영역.
+    - 한번의 클라이언트 요청에 대하여 하나의 JSP 페이지가 호출되며, 이때 단 한 개의 page 객체만 대응이 된다.
+    - 페이지 영역에 저장한 값은 페이지를 벗어나면 사라진다.
+    - 커스텀 태그에서 새로운 변수를 추가할 때 사용한다.
+
+- request<br>
+
+- session<br>
+
+- application<br>
 
 ### <a style="color:#00adb5">기본 객체의 영역 ( Scope ) - 공통 메서드</a> 
 
