--- a/_posts/TIL/2022-03-25-220325_TIL.md
+++ b/_posts/TIL/2022-03-25-220325_TIL.md
@@ -13,7 +13,13 @@ sidebar:
 ## ⌨ <a style="color:#00adb5">Today I Learned</a> 
 - MVC 모델 학습
 - MVC 모델 실습 과제
-- JSP, Cookie, session 정리
+- JSP정리
+- BOJ_18870
 
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘도 MVC 모델을 이용한 JSP Model 2 구조의 동적 웹 프로그램을 실습해보았다.<br>
+하나하나 따라가면서 어떻게 구성되었는지 어디로 연결되며 어디서 데이터를 가져와서 사용하고 호출하는지 분석했다.<br>
+중요한건 Model, View, Controller 마다 담당하는 것을 적절하게 구현하여 웹을 구성해야하는 것이다.<br>
+어느정도의 암기도 필요하다고 생각하기 때문에 내일 session. cookie, el, jstl 정리를 다하고 주말간에 암기를 해야겠다 !!<br>
+알골도 물론 !! 풀고 .. 오늘 solved.ac 에서 class 3을 끝냈다. 내일부터는 class 4 로 승급 ^^
