--- a/_posts/WEB/2022-03-23-WEB_JSP.md
+++ b/_posts/WEB/2022-03-23-WEB_JSP.md
@@ -240,15 +240,97 @@ Error를 처리하는 JSP에서 isErrorPage 속성을 true로 설정하면 excep
     - 커스텀 태그에서 새로운 변수를 추가할 때 사용한다.
 
 - request<br>
+    - 하나의 HTTP 요청을 처리할 때 사용되는 영역.
+    - 웹 브라우저가 요청을 할 때 마다 새로운 request 객체가 생성됨
+    - request 영역에 저장한 속성은 그 요청에 대한 응답이 완료되면 사라진다.
 
 - session<br>
+    - 하나의 웹 브라우저와 관련된 영역
+    - 같은 웹 브라우저 내에서 요청되는 페이지들은 같은 session들을 공유하게 됨
+    - 로그인 정보 등을 저장한다
 
 - application<br>
+    - 하나의 웹 어플리케이션과 관련된 영역
+    - 웹 어플리케이션당 1개의 application 객체가 생성됨
+    - 같은 웹 어플리케이션에서 요청되는 페이지들은 같은 application객체를 공유함
 
 ### <a style="color:#00adb5">기본 객체의 영역 ( Scope ) - 공통 메서드</a> 
+servlet과 jsp페이지 간에 특정 정보를 주고 받거나 공유하기 위한 메서드를 지원<br>
+
+- void setAttribute(String name, Object value)<br>
+문자열 name 이름으로 Object형 데이터를 저장한다.<br>
+Object 형이므로 어떠한 java 객체도 저장이 가능하다.
+
+- Object getAttribute(String name)<br>
+문자열 name에 해당하는 속성 값이 있다면 Object 형태로 가져오고 없으면 null을 리턴한다.<br>
+따라서 리턴 값에 대한 적절한 형 변환이 필요하다.
+
+- Enumeration getAttributeNames()<br>
+현재 객체에 저장된 속성들의 이름을 Enumeration 형태로 가져온다.
+
+- void removeAttribute(String name)<br>
+문자열 name에 해당하는 속성을 삭제한다.
 
 ### <a style="color:#00adb5">Web Page 이동</a> 
 
-<br><br><br><br>
-👏 참조<br>
-<a href="https://mangkyu.tistory.com/14" target=_blank>https://mangkyu.tistory.com/14</a><br>
+#### <a style="color:#00adb5">forward ( request, response ) </a> 
+
+- 사용 방법
+
+```java
+
+RequestDispatcher dispatcher = request.getRequestDistpatcher(path);
+dispatcher.forward(request, response);
+
+```
+
+- 이동 범위<br>
+동일 서버 (project) 내 경로
+
+- location bar<br>
+기존 URL 유지 ( 실제 이동되는 주소 확인 불가 )
+
+- 객체<br>
+기존의 request 와 response 가 그대로 전달
+
+- 속도<br>
+비교적 빠름
+
+- 데이터 유지<br>
+request의 setAttribute(name, value)를 통해 전달
+
+#### <a style="color:#00adb5">sendRedirect ( location ) </a> 
+
+- 사용 방법
+
+```java
+
+response.sendRedirect( location );
+
+```
+
+- 이동 범위<br>
+동일 서버 포함 타 URL 가능
+
+- location bar<br>
+이동하는 page로 변경
+
+- 객체<br>
+기존의 request와 response는 소멸되고, 새로운 request와 response가 생성
+
+- 속도<br>
+forward()에 비해 느림
+
+- 데이터 유지<br>
+request로는 data 저장 불가능<br>
+session이나 cookie를 이용
+
+
+## <a style="color:#00adb5">JSP</a> 마무리
+JSP에 대해 배워보았다.<br>
+HTML안에 java를 넣는거라서 확실히 servlet 보다는 가독성이 좋고 더 간단했다.<br>
+특히 자바코드를 넣는부분이 간단해져서 번거로운 작업을 피할 수 있어서 좋은 것 같다.<br>
+그러나 JSP에서도 번거로운 작업들이 있어 그것은 jstl을 통해 해결하면 될 것 같다.<br>
+그리고 JSP 까지 배우니 정말 동적인 웹페이지를 구현할 수 있게 되었다.<br>
+MVC 모델을 활용하여 실습도 해보았는데 확실히 복잡해졌다.<br>
+약속되어져있는 구조라 많이 만들어보며 구조를 파악해야 할 것 같다.
