--- a/_posts/TIL/2022-03-27-220327_TIL.md
+++ b/_posts/TIL/2022-03-27-220327_TIL.md
@@ -16,3 +16,7 @@ sidebar:
 - JSTL 정리
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 빠르게 JSTL 정리와 알고리즘 문제를 풀고 MVC 모델 웹 구현을 하였다.<br>
+어제 수업들은 것을 혼자 처음부터 해봤는데 차근차근 정리하면서 따라가 보았다.<br>
+먼저 가장 중요한 것들을 위주로 정리를 하고 전체적인 흐름을 파악할려고 노력했다.<br>
+내일 60점 이상 맞아야 하는데 .. 맞을 수 있겠지..? 마지막 월말평가 좋은 마무리 할 수 있도록 하자 !!
