--- a/_posts/BOJ/2022-03-28_BOJ_S1_9465.md
+++ b/_posts/BOJ/2022-03-28_BOJ_S1_9465.md
@@ -55,7 +55,7 @@ public class Main {
 					// 아래줄
 					dp[1][j] = Math.max(dp[0][j-1], dp[0][j-2]) + arr[1][j];
 				}
-				sb.append(dp[1][n]).append("\n");
+				sb.append(Math.max(dp[0][n],dp[1][n])).append("\n");
 		}
 		System.out.println(sb);
 	}
