--- a/_posts/TIL/2022-03-28-220328_TIL.md
+++ b/_posts/TIL/2022-03-28-220328_TIL.md
@@ -15,3 +15,10 @@ sidebar:
 - BOJ_9465
 
 ## 💡 <a style="color:#00adb5">Today I Thought</a>
+오늘은 이때까지 공부한 MVC 모델 Dynamic web project 를 진행했다.<br>
+일종의 Test 같은거다.<br>
+로그인, 로그아웃, select, insert, update, delete 를 DB와 연동해서 구현하는 건데.. 절기도 절고 시간도 너무 부족했다.<br>
+다른 조원들 얘기 들어보니 다들 시간이 부족했다더라..<br>
+시험 치고도 느낀게 아직 많이 부족한 것을 느꼈다.. 헷갈리는 것도 많았고.. <br>
+이제 알골 2주하고 다음에 Spring에 들어가는데 Spring 들어가기 전에 한 번 다시 공부하고 들어가야겠다 !!<br>
+오늘도 알골 한 문제 성공 !!
